add DataCleaner class

--- a/fill_na.ipynb
+++ b/fill_na.ipynb
@@ -716,12 +716,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "81a8763e",
+   "execution_count": 193,
+   "id": "26bcff8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T11:11:44.397064Z",
-     "start_time": "2021-06-23T11:11:44.370975Z"
+     "end_time": "2021-06-23T11:24:55.065307Z",
+     "start_time": "2021-06-23T11:24:55.037964Z"
     }
    },
    "outputs": [],
@@ -759,13 +759,15 @@
     "    def _nan_interp(self, array_2d, threshold=12):\n",
     "        \n",
     "        for i in range(array_2d.shape[1]):\n",
-    "            if np.isnan(array_2d[:, i]).sum() < threshold:\n",
+    "            if 0 < np.isnan(array_2d[:, i]).sum() < threshold:\n",
     "                nans, f = self._nan_helper(array_2d[:, i])\n",
     "                array_2d[nans, i] = np.interp(\n",
     "                    f(nans), f(~nans), array_2d[~nans, i])\n",
-    "            else:\n",
+    "            elif np.isnan(array_2d[:, i]).sum() > threshold:\n",
     "                inds = np.where(np.isnan(array_2d[:, i]))\n",
     "                array_2d[inds, i] = np.nanmean(array_2d[:, i])\n",
+    "            else:\n",
+    "                pass\n",
     "\n",
     "        return array_2d\n",
     "    \n",
@@ -785,12 +787,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "f0ffea5b",
+   "execution_count": 194,
+   "id": "525d0dca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T11:11:46.358327Z",
-     "start_time": "2021-06-23T11:11:46.345741Z"
+     "end_time": "2021-06-23T11:24:55.779596Z",
+     "start_time": "2021-06-23T11:24:55.774559Z"
     }
    },
    "outputs": [],
@@ -800,12 +802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "b252dc14",
+   "execution_count": 195,
+   "id": "0f82953a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T11:12:12.487057Z",
-     "start_time": "2021-06-23T11:11:53.950972Z"
+     "end_time": "2021-06-23T11:25:11.747601Z",
+     "start_time": "2021-06-23T11:24:58.421296Z"
     }
    },
    "outputs": [
@@ -813,23 +815,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-182-473060185078>:40: RuntimeWarning: Mean of empty slice\n",
+      "<ipython-input-193-d6faa798ceba>:40: RuntimeWarning: Mean of empty slice\n",
       "  array_2d[inds, i] = np.nanmean(array_2d[:, i])\n"
      ]
     }
    ],
    "source": [
-    "test = data_cleaner._clean_na(X_train.source)"
+    "test = data_cleaner.clean_data(X_train.source)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "99046ee1",
+   "execution_count": 188,
+   "id": "8568f9f2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T11:13:12.914748Z",
-     "start_time": "2021-06-23T11:13:11.234025Z"
+     "end_time": "2021-06-23T11:17:16.766453Z",
+     "start_time": "2021-06-23T11:17:14.912567Z"
     }
    },
    "outputs": [
@@ -840,7 +842,7 @@
        "       0.        , 0.        , 0.        , 0.        , 0.        ])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,8 +854,291 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 190,
+   "id": "1afca71d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-23T11:18:16.718906Z",
+     "start_time": "2021-06-23T11:18:00.550589Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>4636128.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "      <td>30985920.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>9.26</td>\n",
+       "      <td>1457.53</td>\n",
+       "      <td>104.00</td>\n",
+       "      <td>-30.16</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>-19.32</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>34.76</td>\n",
+       "      <td>2217.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.14</td>\n",
+       "      <td>5154.62</td>\n",
+       "      <td>343.75</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>4.24</td>\n",
+       "      <td>9.06</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>10.53</td>\n",
+       "      <td>1065.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-50.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-58.51</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-40.00</td>\n",
+       "      <td>-11.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0%</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-50.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-58.51</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-40.00</td>\n",
+       "      <td>-11.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10%</th>\n",
+       "      <td>7.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-33.98</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-31.54</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>3000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30%</th>\n",
+       "      <td>10.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-31.29</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-29.58</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>3240.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>12.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-29.96</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-28.54</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.27</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>3280.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95%</th>\n",
+       "      <td>17.00</td>\n",
+       "      <td>23426.00</td>\n",
+       "      <td>1511.00</td>\n",
+       "      <td>-25.04</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>-27.21</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>3320.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99%</th>\n",
+       "      <td>20.00</td>\n",
+       "      <td>23426.00</td>\n",
+       "      <td>1511.00</td>\n",
+       "      <td>-21.31</td>\n",
+       "      <td>8.26</td>\n",
+       "      <td>-25.53</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>63.00</td>\n",
+       "      <td>3340.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99.5%</th>\n",
+       "      <td>21.00</td>\n",
+       "      <td>23426.00</td>\n",
+       "      <td>1511.00</td>\n",
+       "      <td>-19.67</td>\n",
+       "      <td>9.60</td>\n",
+       "      <td>-23.47</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>64.00</td>\n",
+       "      <td>3360.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>119.00</td>\n",
+       "      <td>23426.00</td>\n",
+       "      <td>1511.00</td>\n",
+       "      <td>-14.89</td>\n",
+       "      <td>10545.36</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1695.55</td>\n",
+       "      <td>7.42</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>3420.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0           1           2          3           4           5  \\\n",
+       "count 30985920.00 30985920.00 30985920.00 4636128.00 30985920.00 30985920.00   \n",
+       "mean         9.26     1457.53      104.00     -30.16        0.59      -19.32   \n",
+       "std          4.14     5154.62      343.75       3.17        4.24        9.06   \n",
+       "min          0.00        0.00        0.00     -50.00        0.00      -58.51   \n",
+       "0%           0.00        0.00        0.00     -50.00        0.00      -58.51   \n",
+       "10%          7.00        0.00        0.00     -33.98        0.00      -31.54   \n",
+       "30%         10.00        0.00        0.00     -31.29        0.00      -29.58   \n",
+       "50%         12.00        0.00        0.00     -29.96        0.01      -28.54   \n",
+       "95%         17.00    23426.00     1511.00     -25.04        2.93      -27.21   \n",
+       "99%         20.00    23426.00     1511.00     -21.31        8.26      -25.53   \n",
+       "99.5%       21.00    23426.00     1511.00     -19.67        9.60      -23.47   \n",
+       "max        119.00    23426.00     1511.00     -14.89    10545.36        0.00   \n",
+       "\n",
+       "                6           7           8           9  \n",
+       "count 30985920.00 30985920.00 30985920.00 30985920.00  \n",
+       "mean         0.12        2.17       34.76     2217.76  \n",
+       "std          0.88        1.39       10.53     1065.60  \n",
+       "min          0.00      -40.00      -11.00        0.00  \n",
+       "0%           0.00      -40.00      -11.00        0.00  \n",
+       "10%          0.00        1.90       30.00     3000.00  \n",
+       "30%          0.00        2.15       36.00     3240.00  \n",
+       "50%          0.00        2.27       41.00     3280.00  \n",
+       "95%          0.32        2.83       55.00     3320.00  \n",
+       "99%          3.00        3.07       63.00     3340.00  \n",
+       "99.5%        4.54        3.15       64.00     3360.00  \n",
+       "max       1695.55        7.42       80.00     3420.00  "
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(X_test).describe(percentiles=[0, .1, .3, .5,.95, .99, .995])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "d093d43a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-23T11:19:21.985532Z",
+     "start_time": "2021-06-23T11:19:21.981399Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "r = 54"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "3035e85a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-23T11:19:39.811211Z",
+     "start_time": "2021-06-23T11:19:39.805673Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ded\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 0 r in [434:\n",
+    "    print(\"ded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "08e02627",
+   "id": "d0b471b7",
    "metadata": {},
    "outputs": [],
    "source": []
