test on jupyter nb

--- a/fill_na.ipynb
+++ b/fill_na.ipynb
@@ -6,15 +6,17 @@
    "id": "0d403df5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:23:49.479870Z",
-     "start_time": "2021-06-23T13:23:44.200414Z"
+     "end_time": "2021-06-24T15:42:45.198622Z",
+     "start_time": "2021-06-24T15:42:40.844782Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import rampwf as rw"
+    "import rampwf as rw\n",
+    "\n",
+    "from DataCleaner import DataCleaner"
    ]
   },
   {
@@ -23,8 +25,8 @@
    "id": "4653d719",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:23:49.500608Z",
-     "start_time": "2021-06-23T13:23:49.487296Z"
+     "end_time": "2021-06-24T15:42:45.220517Z",
+     "start_time": "2021-06-24T15:42:45.204834Z"
     }
    },
    "outputs": [],
@@ -38,8 +40,8 @@
    "id": "dee6b773",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:23:49.564873Z",
-     "start_time": "2021-06-23T13:23:49.507686Z"
+     "end_time": "2021-06-24T15:42:45.274146Z",
+     "start_time": "2021-06-24T15:42:45.234221Z"
     }
    },
    "outputs": [],
@@ -53,8 +55,8 @@
    "id": "0425cc20",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:15.832654Z",
-     "start_time": "2021-06-23T13:23:49.574179Z"
+     "end_time": "2021-06-24T15:43:25.113810Z",
+     "start_time": "2021-06-24T15:42:45.284990Z"
     }
    },
    "outputs": [
@@ -98,8 +100,8 @@
    "id": "70095216",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:19.319464Z",
-     "start_time": "2021-06-23T13:24:15.876683Z"
+     "end_time": "2021-06-24T15:43:31.788300Z",
+     "start_time": "2021-06-24T15:43:25.168409Z"
     }
    },
    "outputs": [
@@ -126,8 +128,8 @@
    "id": "4636e7c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:19.366954Z",
-     "start_time": "2021-06-23T13:24:19.324893Z"
+     "end_time": "2021-06-24T15:43:31.866010Z",
+     "start_time": "2021-06-24T15:43:31.799292Z"
     }
    },
    "outputs": [
@@ -638,90 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "26bcff8f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:37.075192Z",
-     "start_time": "2021-06-23T13:24:37.031480Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class DataCleaner:\n",
-    "    \"\"\"\n",
-    "    Class to remove extreme values and NAs from the initial dataset.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, drop_var4=True):\n",
-    "        self.drop_var4 = drop_var4\n",
-    "\n",
-    "    def _get_extreme_value(self, array_3d, cols=[1, 2], q=.9):\n",
-    "        sub_array_3d = array_3d[:, :, cols]\n",
-    "        array_2d = np.concatenate([obs for obs in sub_array_3d], axis=0)\n",
-    "        extreme_val = np.nanquantile(array_2d, q=q, axis=0)\n",
-    "        return {k: v for k, v in zip(cols, extreme_val)}\n",
-    "\n",
-    "    def _clean_extreme_values(self, array_3d):\n",
-    "        d = self._get_extreme_value(array_3d)\n",
-    "\n",
-    "        for array_2d in array_3d:\n",
-    "            for col in d.keys():\n",
-    "                inds = np.where(array_2d[:, col] > d[col])\n",
-    "                array_2d[inds, col] = d[col]\n",
-    "\n",
-    "        return array_3d\n",
-    "\n",
-    "    def _nan_helper(self, array_1d):\n",
-    "        \"\"\"\n",
-    "        Output:\n",
-    "            - nans, logical indices of NaNs\n",
-    "            - index, a function, with signature indices=index(logical_indices),\n",
-    "              to convert logical indices of NaNs to 'equivalent' indices\n",
-    "        \"\"\"\n",
-    "\n",
-    "        return np.isnan(array_1d), lambda z: z.nonzero()[0]\n",
-    "\n",
-    "    def _nan_interp(self, array_2d, threshold=12):\n",
-    "\n",
-    "        for i in range(array_2d.shape[1]):\n",
-    "            if 0 < np.isnan(array_2d[:, i]).sum() < threshold:\n",
-    "                nans, f = self._nan_helper(array_2d[:, i])\n",
-    "                array_2d[nans, i] = np.interp(\n",
-    "                    f(nans), f(~nans), array_2d[~nans, i])\n",
-    "            elif np.isnan(array_2d[:, i]).sum() > threshold:\n",
-    "                inds = np.where(np.isnan(array_2d[:, i]))\n",
-    "                array_2d[inds, i] = np.nanmean(array_2d[:, i])\n",
-    "            else:\n",
-    "                pass\n",
-    "\n",
-    "        return array_2d\n",
-    "\n",
-    "    def _clean_na(self, array_3d):\n",
-    "\n",
-    "        for array_2d in array_3d:\n",
-    "            array_2d = self._nan_interp(array_2d)\n",
-    "\n",
-    "        return array_3d\n",
-    "\n",
-    "    def clean_data(self, array_3d):\n",
-    "\n",
-    "        if self.drop_var4:\n",
-    "            array_3d = np.delete(array_3d, 4, axis=2)\n",
-    "\n",
-    "        X_va_cleaned = self._clean_extreme_values(array_3d)\n",
-    "        X_cleaned = self._clean_na(X_va_cleaned)\n",
-    "        return X_cleaned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "525d0dca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:37.105036Z",
-     "start_time": "2021-06-23T13:24:37.078285Z"
+     "end_time": "2021-06-24T15:43:31.893164Z",
+     "start_time": "2021-06-24T15:43:31.870377Z"
     }
    },
    "outputs": [],
@@ -731,55 +655,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "0f82953a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:24:58.719409Z",
-     "start_time": "2021-06-23T13:24:37.109389Z"
+     "end_time": "2021-06-24T15:43:57.537165Z",
+     "start_time": "2021-06-24T15:43:31.900589Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-9-5c0abd5740c1>:44: RuntimeWarning: Mean of empty slice\n",
-      "  array_2d[inds, i] = np.nanmean(array_2d[:, i])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = data_cleaner.clean_data(X_train.source)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8568f9f2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T13:25:01.057705Z",
-     "start_time": "2021-06-23T13:24:58.721356Z"
+     "end_time": "2021-06-24T15:43:59.850598Z",
+     "start_time": "2021-06-24T15:43:57.539738Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.04176348e-04, 8.44254423e-05, 8.44254423e-05, 8.50384174e-01,\n",
-       "       1.04176348e-04, 8.44254423e-05, 1.04176348e-04, 1.04176348e-04,\n",
-       "       1.04176348e-04])"
+       "0    0\n",
+       "1    0\n",
+       "2    0\n",
+       "3    0\n",
+       "4    0\n",
+       "5    0\n",
+       "6    0\n",
+       "7    0\n",
+       "8    0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_test = np.concatenate([obs for obs in test], axis=0)\n",
-    "np.isnan(X_test).sum(axis=0) / X_test.shape[0]"
+    "pd.DataFrame(X_test).isna().sum()"
    ]
   },
   {
@@ -790,7 +712,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-23T13:25:30.074507Z",
      "start_time": "2021-06-23T13:25:14.454267Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
