--- a/oan_failure_starting_kit.ipynb
+++ b/oan_failure_starting_kit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T15:37:24.212303Z",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T14:45:53.736947Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T14:46:26.053569Z",
@@ -118,6 +118,26 @@
    "source": [
     "X_train, y_train = problem.get_train_data()\n",
     "X_test, y_test = problem.get_test_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50862"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train.source_bkg)"
    ]
   },
   {
@@ -508,9 +528,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;178m\u001b[1mTesting Optical access network failure prediction\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mReading train and test files from ./data/ ...\u001b[0m\n",
+      "Train data\n",
+      "Optical Dataset composed of\n",
+      "46110 source samples\n",
+      "50862 source background samples\n",
+      "438 target labeled samples\n",
+      "8202 target unlabeled samples\n",
+      "29592 target background samples\n",
+      " Optical Dataset labels composed of\n",
+      "46110 labels of source samples\n",
+      "438 labels of target samples\n",
+      "\n",
+      "Test data\n",
+      "Optical Dataset composed of\n",
+      "0 source samples\n",
+      "0 source background samples\n",
+      "17758 target labeled samples\n",
+      "0 target unlabeled samples\n",
+      "47275 target background samples\n",
+      " Optical Dataset labels composed of\n",
+      "0 labels of source samples\n",
+      "17758 labels of target samples\n",
+      "\n",
+      "Train data\n"
+     ]
+    }
+   ],
    "source": [
     "!ramp-test --submission prepare_rf"
    ]
@@ -552,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
