first submit with prepro

--- a/oan_failure_starting_kit.ipynb
+++ b/oan_failure_starting_kit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T15:37:24.212303Z",
@@ -28,35 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T15:37:24.336717Z",
      "start_time": "2021-06-24T15:37:24.289878Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'extract' from 'C:\\\\Users\\\\Daniel\\\\Desktop\\\\projets\\\\Huawei\\\\extract.py'>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import extract\n",
+    "import clean\n",
     "from extract import PrepareExtractor\n",
-    "from DataCleaner import DataCleaner\n",
-    "importlib.reload(extract)"
+    "from clean import DataCleaner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(extract)\n",
+    "importlib.reload(clean);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T14:45:53.736947Z",
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T14:46:26.053569Z",
@@ -121,223 +120,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 106,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50862"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(X_train.source_bkg)"
+    "### Préparation des données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-24T14:46:52.138550Z",
-     "start_time": "2021-06-24T14:46:26.117011Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "data_cleaner = DataCleaner(drop_olt_recv=True)\n",
-    "X_temp = data_cleaner.clean_data(X_train.source)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-24T14:46:53.266213Z",
-     "start_time": "2021-06-24T14:46:52.144610Z"
-    }
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temps :  1.0479333400726318\n"
+      "Temps clean :  32.41353893280029\n",
+      "Temps prepare :  159.410786151886\n",
+      "Temps clean :  0.3790011405944824\n",
+      "Temps prepare :  1.2896771430969238\n"
      ]
     }
    ],
    "source": [
-    "prep = PrepareExtractor()\n",
-    "temp, tempp = prep.get_data(X_temp, size_sample=200, resample={'unit': 'D', 'func': 'mean'}, name=None)"
+    "list_X = []\n",
+    "\n",
+    "for n, X_i in enumerate((X_train.source, X_train.target)):\n",
+    "    data_cleaner = DataCleaner(drop_olt_recv=True)\n",
+    "    X_ = data_cleaner.clean_data(X_i)\n",
+    "    prep = PrepareExtractor()\n",
+    "    X, y = prep.get_data(X_,\n",
+    "                         col_names=data_cleaner.columns,\n",
+    "                         size_sample=-1,\n",
+    "                         resample={'unit': 'D', 'func': 'mean'},\n",
+    "                         name=n)\n",
+    "    list_X.append(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-24T14:46:53.374299Z",
-     "start_time": "2021-06-24T14:46:53.272722Z"
-    },
-    "scrolled": true
-   },
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.vstack(list_X)\n",
+    "y = np.hstack([y_train.source, y_train.target])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>2000-01-01 00:00:00 current</th>\n",
-       "      <th>2000-01-01 00:00:00 err_down_bip</th>\n",
-       "      <th>2000-01-01 00:00:00 err_up_bip</th>\n",
-       "      <th>2000-01-01 00:00:00 rdown</th>\n",
-       "      <th>2000-01-01 00:00:00 recv</th>\n",
-       "      <th>2000-01-01 00:00:00 rup</th>\n",
-       "      <th>2000-01-01 00:00:00 send</th>\n",
-       "      <th>2000-01-01 00:00:00 temp</th>\n",
-       "      <th>2000-01-01 00:00:00 volt</th>\n",
-       "      <th>2000-01-02 00:00:00 current</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2000-01-06 00:00:00 volt</th>\n",
-       "      <th>2000-01-07 00:00:00 current</th>\n",
-       "      <th>2000-01-07 00:00:00 err_down_bip</th>\n",
-       "      <th>2000-01-07 00:00:00 err_up_bip</th>\n",
-       "      <th>2000-01-07 00:00:00 rdown</th>\n",
-       "      <th>2000-01-07 00:00:00 recv</th>\n",
-       "      <th>2000-01-07 00:00:00 rup</th>\n",
-       "      <th>2000-01-07 00:00:00 send</th>\n",
-       "      <th>2000-01-07 00:00:00 temp</th>\n",
-       "      <th>2000-01-07 00:00:00 volt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>408.0</td>\n",
-       "      <td>31.968750</td>\n",
-       "      <td>0.820359</td>\n",
-       "      <td>-30.465311</td>\n",
-       "      <td>0.041641</td>\n",
-       "      <td>2.264688</td>\n",
-       "      <td>45.583332</td>\n",
-       "      <td>3279.791748</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3280.0</td>\n",
-       "      <td>14.052083</td>\n",
-       "      <td>408.0</td>\n",
-       "      <td>21.781250</td>\n",
-       "      <td>1.282615</td>\n",
-       "      <td>-30.459999</td>\n",
-       "      <td>0.056198</td>\n",
-       "      <td>2.263125</td>\n",
-       "      <td>45.906250</td>\n",
-       "      <td>3279.791748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.052083</td>\n",
-       "      <td>0.036052</td>\n",
-       "      <td>-28.530626</td>\n",
-       "      <td>0.003604</td>\n",
-       "      <td>2.132396</td>\n",
-       "      <td>41.947918</td>\n",
-       "      <td>3280.000000</td>\n",
-       "      <td>10.958333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3280.0</td>\n",
-       "      <td>10.572917</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.822917</td>\n",
-       "      <td>0.094948</td>\n",
-       "      <td>-28.271250</td>\n",
-       "      <td>0.004729</td>\n",
-       "      <td>2.154896</td>\n",
-       "      <td>40.802082</td>\n",
-       "      <td>3280.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 63 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   2000-01-01 00:00:00 current  2000-01-01 00:00:00 err_down_bip  \\\n",
-       "0                         14.0                             408.0   \n",
-       "0                         11.0                               0.0   \n",
-       "\n",
-       "   2000-01-01 00:00:00 err_up_bip  2000-01-01 00:00:00 rdown  \\\n",
-       "0                       31.968750                   0.820359   \n",
-       "0                        1.052083                   0.036052   \n",
-       "\n",
-       "   2000-01-01 00:00:00 recv  2000-01-01 00:00:00 rup  \\\n",
-       "0                -30.465311                 0.041641   \n",
-       "0                -28.530626                 0.003604   \n",
-       "\n",
-       "   2000-01-01 00:00:00 send  2000-01-01 00:00:00 temp  \\\n",
-       "0                  2.264688                 45.583332   \n",
-       "0                  2.132396                 41.947918   \n",
-       "\n",
-       "   2000-01-01 00:00:00 volt  2000-01-02 00:00:00 current  ...  \\\n",
-       "0               3279.791748                    14.000000  ...   \n",
-       "0               3280.000000                    10.958333  ...   \n",
-       "\n",
-       "   2000-01-06 00:00:00 volt  2000-01-07 00:00:00 current  \\\n",
-       "0                    3280.0                    14.052083   \n",
-       "0                    3280.0                    10.572917   \n",
-       "\n",
-       "   2000-01-07 00:00:00 err_down_bip  2000-01-07 00:00:00 err_up_bip  \\\n",
-       "0                             408.0                       21.781250   \n",
-       "0                               0.0                        0.822917   \n",
-       "\n",
-       "   2000-01-07 00:00:00 rdown  2000-01-07 00:00:00 recv  \\\n",
-       "0                   1.282615                -30.459999   \n",
-       "0                   0.094948                -28.271250   \n",
-       "\n",
-       "   2000-01-07 00:00:00 rup  2000-01-07 00:00:00 send  \\\n",
-       "0                 0.056198                  2.263125   \n",
-       "0                 0.004729                  2.154896   \n",
-       "\n",
-       "   2000-01-07 00:00:00 temp  2000-01-07 00:00:00 volt  \n",
-       "0                 45.906250               3279.791748  \n",
-       "0                 40.802082               3280.000000  \n",
-       "\n",
-       "[2 rows x 63 columns]"
+       "((46548, 64), (46548,))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp.head(2)"
+    "X.shape, y.shape"
    ]
   },
   {
@@ -346,20 +193,77 @@
    "source": [
     "### Classification\n",
     "\n",
-    "Vous devez soumettre un extracteur de caractéristiques et un classificateur. La fonction transform de l'extracteur de caractéristiques est exécutée sur chaque donnée d'entrée (cible, source, bkg) et les tableaux résultants sont passés aux fonctions fit et predict du classificateur. L'extracteur de caractéristiques du kit de départ remplace nans par zéro, et aplatit la matrice en **(sample, 6720)**."
+    "Il faut soumettre un extracteur de caractéristiques et un classifieur. La fonction `transform` de l'extracteur de caractéristiques est exécutée sur chaque donnée d'entrée (cible, source, bkg) et les tableaux résultants sont passés aux fonctions fit et predict du classifieur."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-24T14:12:05.933472Z",
      "start_time": "2021-06-24T14:10:28.671521Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temps clean :  39.49433183670044\n",
+      "Temps prepare :  154.41123390197754\n",
+      "(46110, 253)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "submissions/prepare_rf/feature_extractor.py:94: RuntimeWarning: Mean of empty slice\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temps clean :  50.07652497291565\n",
+      "Temps prepare :  173.56100821495056\n",
+      "(50862, 253)\n",
+      "Temps clean :  0.4492971897125244\n",
+      "Temps prepare :  1.6324219703674316\n",
+      "(438, 253)\n",
+      "Temps clean :  8.725809812545776\n",
+      "Temps prepare :  22.908020973205566\n",
+      "(8202, 253)\n",
+      "Temps clean :  29.15816903114319\n",
+      "Temps prepare :  82.29805588722229\n",
+      "(29592, 253)\n",
+      "LGBMClassifier(n_estimators=500, random_state=44)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "submissions/prepare_rf/feature_extractor.py:94: RuntimeWarning: Mean of empty slice\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temps clean :  15.754160165786743\n",
+      "Temps prepare :  53.1059889793396\n",
+      "(17758, 253)\n",
+      "Temps clean :  50.34573221206665\n",
+      "Temps prepare :  162.23746609687805\n",
+      "(47275, 253)\n"
+     ]
+    }
+   ],
    "source": [
     "trained_workflow = problem.workflow.train_submission('submissions/prepare_rf', X_train, y_train)\n",
     "y_test_pred = problem.workflow.test_submission(trained_workflow, X_test)"
@@ -374,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,9 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ap test score    = 0.2249308868473206\n",
+      "rec5 test score  = 0.1181342601776123\n",
+      "rec10 test score = 0.21447253227233887\n",
+      "rec20 test score = 0.3779424726963043\n",
+      "acc test score   = 0.8457596576191012\n",
+      "auc test score   = 0.6538917229814298\n"
+     ]
+    }
+   ],
    "source": [
     "print('ap test score    = {}'.format(ap(y_test.target, y_test_pred[:,1])))\n",
     "print('rec5 test score  = {}'.format(rec5(y_test.target, y_test_pred[:,1])))\n",
@@ -515,13 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Local testing (before submission)\n",
-    "\n",
-    "You submission will contain a `feature_extractor.py` implementing a FeatureExtractor class with a `transform` function (no `fit`) and a `classifier.py` implementing a Classifier class with a `fit` and `predict_proba` functions as in the starting kit. You should place it in the `submission/<submission_name>` folder in your RAMP kit folder. To test your submission, go to your RAMP kit folder in the terminal and type\n",
-    "```\n",
-    "ramp-test --submission <submission_name>\n",
-    "```\n",
-    "It will train and test your submission much like we did it above in this notebook, and print the foldwise and summary scores. You can try it also in this notebook:"
+    "## Local testing (before submission)"
    ]
   },
   {
